--- a/src/main/webapp/admin/admin_course.html
+++ b/src/main/webapp/admin/admin_course.html
@@ -45,13 +45,13 @@
                 </li>
 
                 <li class="nav-item nav-dropdown">
-                    <a class="nav-link nav-dropdown-toggle" href="admin_index.html"><i class="icon-star"></i>学生信息管理</a>
+                    <a class="nav-link " href="admin_index.html"><i class="icon-star"></i>学生信息管理</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="admin_teacher.html"><i class="icon-calculator"></i>教师信息管理</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="admin_course.html"><i class="icon-pie-chart"></i>课程信息管理</a>
+                    <a class="nav-link nav-dropdown-toggle" href="admin_course.html"><i class="icon-pie-chart"></i>课程信息管理</a>
                 </li>
                 <li class="divider"></li>
             </ul>
