--- a/src/main/webapp/login/login.html
+++ b/src/main/webapp/login/login.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>96社团选课系统</title>
   <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/login/css/style.css">
 </head>
 <body>
 
@@ -25,10 +25,12 @@
             $.post(baseUrl+"/user/signIn",
                 {
                     num:num,
-                    city:pass
+                    pass:pass
                 },
                 function(data,status){
-                    if(data.code!=200){
+                    if(data.code==200){
+                        window.location.href=baseUrl+data.data
+                    }else {
                         alert("账号或密码不正确")
                     }
                 });
